migrate filesystem service from older io to nio