@@ -14,7 +14,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.*;
@@ -50,15 +49,14 @@ public class FileSystemService implements FileSystemRepository {
     public Map<String, List<?>> getListOfMetadataFromPath(List<Path> filePaths) throws FileSystemException, SQLException {
         List<FileListItemDTO> fileList = new ArrayList<>();
         List<FolderListItemDTO> folderList = new ArrayList<>();
-        for (Path path : filePaths) {
-            File file = path.toFile();
+        for (Path file : filePaths) {
             //ignore dotfiles
-            if (file.getName().startsWith(".")) continue;
+            if (file.getFileName().startsWith(".")) continue;
             logger.info("file/folder in queue {}", file);
-            String[] arrayString = encodingUtility.decodedBase32SplitArray(file.getName());
+            String[] arrayString = encodingUtility.decodedBase32SplitArray(file.getFileName().toString());
             long actualFileId = Long.parseLong(arrayString[0]);
             String actualFileName = arrayString[1];
-            if (file.isFile()) {
+            if (Files.isRegularFile(file)) {
                 FileMetadata foundFile = sqLiteDAO.queryFileMetadata(actualFileId, userSession.getId());
                 FileListItemDTO fileListItemDTO = new FileListItemDTO(foundFile);
                 fileListItemDTO.setName(actualFileName);
@@ -76,14 +74,14 @@ public class FileSystemService implements FileSystemRepository {
     @Override
     public String removeFile(FileMetadata file) throws Exception {
         //find folder
-        File checkExists = fileUtility.returnFileIfItExists(
-                fileUtility.getFolderPath(file.getFolderId()) + File.separator + file.getName());
+        Path checkExists = fileUtility.returnPathIfItExists(Paths.get(
+                fileUtility.getFolderPath(file.getFolderId()), file.getName()).toString());
         //remove Folder
         // use nio instead
-        if (!Files.deleteIfExists(checkExists.toPath()))
-            throw new FileSystemException(String.format("Failed to remove folder at path %s\n", checkExists.getPath()));
+        if (!Files.deleteIfExists(checkExists))
+            throw new FileSystemException(String.format("Failed to remove folder at path %s\n", checkExists));
         sqLiteDAO.deleteFile(file);
-        return checkExists.getPath();
+        return checkExists.toString();
     }
 
     @Override
@@ -91,47 +89,47 @@ public class FileSystemService implements FileSystemRepository {
         String pathToRemove = fileUtility.resolvePathFromIdString(folder.getPath());
         logger.info("pathToRemove = {}", pathToRemove);
         //find folder
-        File checkExists = fileUtility.returnFileIfItExists(pathToRemove);
+        Path checkExists = fileUtility.returnPathIfItExists(pathToRemove);
         //remove Folder
-        fileUtility.deleteFsTree(checkExists.toPath(), folder.getPath());
-        if (!Files.deleteIfExists(checkExists.toPath()))
+        fileUtility.deleteFsTree(checkExists, folder.getPath());
+        if (!Files.deleteIfExists(checkExists))
             throw new IOException("Failed to remove parent folder");
         sqLiteDAO.deleteFolder(folder);
-        return checkExists.getPath();
+        return checkExists.toString();
     }
 
     @Override
     public String updateFolderName(String newName, FolderMetadata folder) throws Exception {
         //find file
-        File checkExists = fileUtility.returnFileIfItExists(fileUtility.resolvePathFromIdString(folder.getPath()));
+        Path checkExists = fileUtility.returnPathIfItExists(fileUtility.resolvePathFromIdString(folder.getPath()));
         //check duplicate
         if (fileUtility.checkIfFileExistsDecodeNames(fileUtility.returnParentFolderPathFromFolderID(folder.getId()), newName))
             throw new FileAlreadyExistsException(String.format("Folder with name %s already exists", newName));
         // Encode newName in BASE32
         String encodeBase32FolderName = encodingUtility.encodeBase32FolderName(folder.getId(), newName, folder.getUserid());
         //rename file
-        File renamedFolder =
-                fileUtility.returnIfItsNotADuplicate(Path.of(checkExists.getPath()).getParent() + File.separator + encodeBase32FolderName);
-        logger.info("estimated path: {}", renamedFolder.getPath());
-        Path newUpdatedPath = Files.move(checkExists.toPath(), renamedFolder.toPath());
+        Path renamedFolder =
+                fileUtility.returnPathIfItsNotADuplicate(Paths.get(checkExists.getParent().toString(), encodeBase32FolderName).toString());
+        logger.info("estimated path: {}", renamedFolder);
+        Path newUpdatedPath = Files.move(checkExists, renamedFolder);
         if (Files.exists(newUpdatedPath)) {
             //set new name and path
             folder.setName(encodeBase32FolderName);
             //save
             sqLiteDAO.saveFolder(folder);
-            logger.info("Renamed folder full path: {}", renamedFolder.getPath());
+            logger.info("Renamed folder full path: {}", renamedFolder);
         } else {
             throw new FileSystemException(String.format("Failed to rename the folder to %s", newName));
         }
-        return renamedFolder.getPath();
+        return renamedFolder.toString();
     }
 
     @Override
     public String updateFileName(String newName, FileMetadata file) throws Exception {
         String folderPath = fileStorageProperties.getFullPath(fileUtility.getFolderPath(file.getFolderId()));
         //find file
-        File checkExists = new File(folderPath + File.separator + file.getName());
-        if (!Files.exists(checkExists.toPath(), LinkOption.NOFOLLOW_LINKS))
+        Path checkExists = Paths.get(folderPath, file.getName());
+        if (!Files.exists(checkExists, LinkOption.NOFOLLOW_LINKS))
             throw new FileNotFoundException("File not found");
         // Encode newName in BASE32
         if (!fileUtility.hasFileExtension(newName)) {
@@ -142,42 +140,42 @@ public class FileSystemService implements FileSystemRepository {
         }
         String encodeBase32FolderName = encodingUtility.encodeBase32FolderName(file.getId(), newName, file.getUserid());
         //rename file
-        File renamedFile = new File(folderPath + File.separator + encodeBase32FolderName);
+        Path renamedFile = Paths.get(folderPath, encodeBase32FolderName);
         if (fileUtility.checkIfFileExistsDecodeNames(fileUtility.getFolderPath(file.getFolderId()), newName))
             throw new FileAlreadyExistsException(String.format("File with name %s already exists", newName));
         // Perform movement
-        Path newUpdatedPath = Files.move(checkExists.toPath(), renamedFile.toPath());
+        Path newUpdatedPath = Files.move(checkExists, renamedFile);
         if (!Files.exists(newUpdatedPath))
-            throw new FileSystemException(String.format("Failed to rename the file to %s", renamedFile.getName()));
+            throw new FileSystemException(String.format("Failed to rename the file to %s", renamedFile.getFileName()));
         // get ready for transaction
         // mimetype has bug in the library (cant detect types such as YAML)
-        String newMimeType = fileUtility.useTikaCoreMimeTypeFromExtension(newUpdatedPath.toFile()); /* <- get new mimetype of file */
+        String newMimeType = fileUtility.getMimeTypeFromExtensionUsingTikaCore(newUpdatedPath.toFile()); /* <- get new mimetype of file */
         //set new name and path
         file.setName(encodeBase32FolderName);
         file.setMimiType(newMimeType != null ? newMimeType : file.getMimiType());
         //save
         sqLiteDAO.saveFile(file);
-        logger.info("Renamed file full path: {}", renamedFile.getPath());
-        return renamedFile.getPath();
+        logger.info("Renamed file full path: {}", renamedFile);
+        return renamedFile.toString();
     }
 
     @Override
     public String moveFile(FileMetadata targetFile, long folderId) throws Exception {
         String destinationFolder = fileStorageProperties.getBasePath() + fileUtility.getFolderPath(folderId);
         String currentFolder = fileUtility.getFolderPath(targetFile.getFolderId());
-        String newPath = destinationFolder + File.separator + targetFile.getName();
+        String newPath = Paths.get(destinationFolder, targetFile.getName()).toString();
         logger.info("new file path = {}", newPath);
         //find file
-        String oldPath = fileStorageProperties.getBasePath() + currentFolder + File.separator + targetFile.getName();
+        String oldPath = Paths.get(fileStorageProperties.getBasePath(), currentFolder, targetFile.getName()).toString();
         logger.info("old path service {}", oldPath);
-        File checkExists = new File(oldPath);
-        File checkDestinationExists = new File(destinationFolder);
-        if (!Files.exists(checkExists.toPath(), LinkOption.NOFOLLOW_LINKS))
+        Path checkExists = Path.of(oldPath);
+        Path checkDestinationExists = Path.of(destinationFolder);
+        if (!Files.exists(checkExists, LinkOption.NOFOLLOW_LINKS))
             throw new FileNotFoundException(String.format("File does not exist with name %s at path %s", targetFile.getName(), oldPath));
-        if (!Files.exists(checkDestinationExists.toPath()))
-            throw new FileNotFoundException(String.format("Destination folder does not exist at path %s", checkDestinationExists.getPath()));
-        File updatedPath = new File(newPath);
-        Path movedFile = Files.move(checkExists.toPath(), updatedPath.toPath());
+        if (!Files.exists(checkDestinationExists))
+            throw new FileNotFoundException(String.format("Destination folder does not exist at path %s", checkDestinationExists));
+        Path updatedPath = Path.of(newPath);
+        Path movedFile = Files.move(checkExists, updatedPath);
         if (!Files.exists(movedFile))
             throw new FileSystemException(
                     String.format("Failed to move file with name %s from %s to %s", targetFile.getName(), oldPath, newPath));
@@ -185,7 +183,7 @@ public class FileSystemService implements FileSystemRepository {
         targetFile.setFolderId(folderId);
         //save
         sqLiteDAO.saveFile(targetFile);
-        return checkDestinationExists.getPath();
+        return checkDestinationExists.toString();
     }
 
     /**
@@ -203,20 +201,20 @@ public class FileSystemService implements FileSystemRepository {
     public String moveFolder(FolderMetadata folder, long destinationFolderId) throws Exception {
         String sourcePath = fileUtility.getFolderPath(folder.getId());
         // check if source folder exists
-        File sourceFolder = fileUtility.returnFileIfItExists(sourcePath);
+        Path sourceFolder = fileUtility.returnPathIfItExists(sourcePath);
         // check if destination folder exists
-        File destinationFolder = fileUtility.returnFileIfItExists(fileUtility.getFolderPath(destinationFolderId));
+        Path destinationFolder = fileUtility.returnPathIfItExists(fileUtility.getFolderPath(destinationFolderId));
         // Get folders inside source folder
         List<FolderMetadata> folderMetadataList = sqLiteDAO.findAllStartsWithIdPath(folder.getPath() + "/");
         // Update ID paths of folders affected
         folderMetadataList =
                 fileUtility.updateFolderIdPaths(folderMetadataList, folder.getPath(),
-                        fileUtility.getIdPath(destinationFolderId) + "/" + folder.getId());
+                        sqLiteDAO.getIdPath(destinationFolderId) + "/" + folder.getId());
         // Update ID path of source folder individually
         folder.setPath(
-                folder.getPath().replaceAll(folder.getPath(), fileUtility.getIdPath(destinationFolderId) + "/" + folder.getId()));
+                folder.getPath().replaceAll(folder.getPath(), sqLiteDAO.getIdPath(destinationFolderId) + "/" + folder.getId()));
         // Move folder in system
-        Path updatedPath = Files.move(sourceFolder.toPath(), new File(destinationFolder, folder.getName()).toPath());
+        Path updatedPath = Files.move(sourceFolder, Paths.get(destinationFolder.toString(), folder.getName()));
         if (Files.notExists(updatedPath))
             throw new FileSystemException(String.format("Failed to move the folder from %s to %s", sourcePath, updatedPath));
         // Save changes
@@ -228,7 +226,7 @@ public class FileSystemService implements FileSystemRepository {
     @Override
     public FolderMetadata createFolder(String folderName, long folderId) throws Exception {
         // Paths
-        String idPath = fileUtility.getIdPath(folderId);
+        String idPath = sqLiteDAO.getIdPath(folderId);
         String userFolder = fileUtility.getFolderPath(folderId);
         String fullPath = fileStorageProperties.getFullPath(userFolder);
         // Folder metadata
@@ -242,8 +240,8 @@ public class FileSystemService implements FileSystemRepository {
         if (fileUtility.checkIfFileExistsDecodeNames(userFolder, folderName))
             throw new FileAlreadyExistsException(String.format("Folder with name %s already exists at this path %s.", folderName, fullPath));
         // Create directory
-        File folder = new File(fullPath + File.separator + encodedFolderName);
-        Path createdFolderPath = Files.createDirectory(folder.toPath());
+        Path folder = Paths.get(fullPath, encodedFolderName);
+        Path createdFolderPath = Files.createDirectory(folder);
         if (Files.notExists(createdFolderPath))
             throw new IOException(String.format("Cannot create directory, with name %s.", folderName));
         // save and return metadata
